package espeon.game.red.compiledeffects;

public class CompiledEffect {
    public int sourceid;
}
